@@ -78,7 +78,7 @@ public class Session
 				//~ snake.growOneUnitOfLengthNextTimeThisSnakeMoves();
 			//~ }
 			//~ snake.move();
-			Direction direction = snake.getNextMove();
+			Direction direction = snake.getNextMove(currentGameState);
 			moveSnake(snake, direction, growAllSnakes);
 		}
 		
@@ -120,8 +120,8 @@ public class Session
 	
 	private void moveSnake(Snake snake, Direction dir, boolean grow)
 	{
-		List<SnakeSegment> segments = snake.getSegments();
-		SnakeSegment currentHead = segments.getFirst();
+		LinkedList<SnakeSegment> segments = snake.getSegments();
+		SnakeSegment currentHead = segments.get(0);
 		Position currentHeadPosition = currentHead.getPosition();
 		Position newHeadPosition = dir.calculateNextPosition(currentHeadPosition);
 		SnakeSegment newHeadSegment = new SnakeSegment(board, newHeadPosition, currentHead);
